XWIKI-12575: When doing a copy/rename, the target location final node is duplicated for top level spaces * The #hierarchy macro fallsback on the current document so there's no need to do it. * The specified parent reference is the right one already.
(cherry picked from commit f9f9ab411d1d2737116f7c14be99faaf24be92c7)

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/locationPicker_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/locationPicker_macros.vm
@@ -44,13 +44,8 @@
         #documentPickerModal($options)
         #locationPickerActions
       #end
-      #set ($parentReference = $options.parent.reference)
-      #if (!$parentReference)
-        #set ($parentReference = $doc.documentReference)
-      #end
-      ## Note: We display only the parent space reference here. The new document part will be added from JavaScript.
-      #set ($parentReference = $parentReference.extractReference('SPACE'))
-      #hierarchy($parentReference)
+      ## Note: We display only the parent reference here. The new document part will be added from JavaScript.
+      #hierarchy($options.parent.reference)
       ##
       ## ---------------------------------------------------------------------------------------------------------
       ## Location advanced edit
