XWIKI-12572: Language Menu disappears when you open it and move your mouse out.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/drawer.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/drawer.vm
@@ -25,7 +25,7 @@
  *#
 #macro(drawerTopItemStart $icon $text $id)
   <li class="drawer-menu-item">
-    <a id="$id" role="button" data-toggle="collapse" href="#${id}_menu" aria-expanded="false" aria-controls="${id}_menu"">
+    <a id="$id" role="button" data-toggle="collapse" href="#${id}_menu" aria-expanded="false" aria-controls="${id}_menu">
       <div class="drawer-menu-item-icon">
         <span class="glyphicon glyphicon-${icon}"></span>
       </div>
